# djdanet

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/cli/: formatters.py  main.py
app/core/: config.py  logger.py
app/domain/: entities.py  enums.py  exceptions.py  protocols.py
app/services/: downloader.py  file_manager.py
app/utils/: validators.py
tests/unit/: test_cli.py  test_entities.py  test_file_manager.py  test_validators.py
